fix:spacing

--- a/src/app/components/pageTemplates/homepage/DashboardPage.styles.module.css
+++ b/src/app/components/pageTemplates/homepage/DashboardPage.styles.module.css
@@ -1,5 +1,5 @@
 .StyledCardWrapper {
-  padding-top: var(--spacing-md);
+  padding-top: var(--spacing-xl);
 
 }
 
